--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <section class="intro2026" id="introduction">
   <div class="intro2026__inner">
 
-    <h2 class="intro2026__title">20戸以上の物件に宅配ボックスを<br class="spbr">入れると、数百万円かかる…</h2>
+    <h2 class="intro2026__title">空室対策に「数百万円」かけられますか？ </h2>
 
     <div class="intro2026__cards">
 
@@ -167,6 +167,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="intro2026__imgWrap">
           <img src="./img/introduction3.png" alt="宅配ボックスがないと入居者に選ばれない">
   </div>
+      <p class="tyusyaku">
+    *
+    <a href="https://www.reno-one.com/info/ninki_setubi2024/" target="_blank" rel="noopener">
+      全国賃貸住宅新聞「2024年人気設備ランキング」（単身者向け）​</a></p>
+</h3>
+ 
      </article>
 
 </section>
