--- a/index.html
+++ b/index.html
@@ -631,6 +631,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
                     <div class="faq-item">
                     <div class="faq-question">
+                        <span>荷物の宛名から、他の住民に名前を知られることを入居者が不安に思うのではないでしょうか？</span>
+                    </div>
+                    <p class="faq-answer">
+                        ご安心ください。トリイクでは利用時に「仮名（ニックネーム等）」で申請できる仕組みを採用しています。</br>住民同士で本名などの個人情報が見えることはないため、プライバシーに敏感な入居者様の不安を解消し、トラブル防止にもつながります。</p>
+            
+                </div>
+                    <div class="faq-item">
+                    <div class="faq-question">
                         <span>導入コストや月額費は、どれぐらいかかりますか？</span>
                     </div>
                     <p class="faq-answer">
