--- a/index.html
+++ b/index.html
@@ -692,9 +692,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         無料診断
       </a>
 
-      <a class="cta-button totel" href="tel:09082792219">
-        <span class="telno">090-8279-2219</span>電話相談
-      </a>
+      <a class="cta-button tocontact"
+   href="https://everywill-jp.com/contact/"
+   target="_blank" rel="noopener">
+  <img src="./img/icon_form.png" alt="問い合わせアイコン">
+  問い合わせ
+</a>
     </div>
   </div>
 </footer>
