Update CTA dates in index.html

--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="flexbox">
                 <div class="flexlisttxt">
                 <p>現在、トリイクを100ヶ所へ設置するべく<br>先行予約を開始しています！</p>
-                <div class="cta-highlight">2026年1月時点で、予約数30件！！</div>
+                <div class="cta-highlight">2026年2月時点で、予約数30件！！</div>
                 <p style="margin-top: 30px;"><strong>“空室が増える前”になる前に、確かな選択を。</strong></p>
                 <p style="margin-top: 30px;"> 住環境の質が問われてしまう今こそ、
 <br>行動のタイミングです。</p>
@@ -675,7 +675,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
    <!-- Contact CTA Section -->
 <footer class="section section-blue footermenu2">
   <div class="container" style="text-align: center;">
-    <div class="cta-topline">＼年始特別！1月のご相談で特別プランあり／</div>
+    <div class="cta-topline">＼2月のご相談で特別プランあり／</div>
 
     <div class="cta-buttons">
       <a class="cta-button todocument"
