--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <section class="section-white result-logos">
     <div class="container">
-        <h2 class="result-title">官民協業の実績、およびメディア掲載多数</h2>
+        <h2 class="result-title">官民協業の実績、<br class = "spbr">およびメディア掲載多数</h2>
         <div class="logo-slider">
             <div class="logo-track">
                 <div class="logo-item"><img src="./img/result1.png" alt="実績1"></div>
